--- a/.github/workflows/bcc-test.yml
+++ b/.github/workflows/bcc-test.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         os: [{distro: "ubuntu", version: "24.04", nick: noble}]
-        llvm_version: [15, 17, 19]
+        llvm_version: [19]
         env:
         - TYPE: Debug
           PYTHON_TEST_LOGFILE: critical.log
@@ -48,7 +48,7 @@ jobs:
     - name: Pull docker container
       if: steps.changes.outputs.docker == 'false'
       run: |
-        docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.os.distro }}-${{ matrix.os.version }}
+        docker pull ${{ env.REGISTRY }}/iovisor/bcc:${{ matrix.os.distro }}-${{ matrix.os.version }}
     - name: Build docker container
       if: steps.changes.outputs.docker == 'true'
       uses: ./.github/actions/build-container
@@ -59,7 +59,7 @@ jobs:
         llvm_versions: ${{ matrix.llvm_version }}
     - name: Tag docker container
       run: |
-        docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.os.distro }}-${{ matrix.os.version }} bcc-docker
+        docker tag ${{ env.REGISTRY }}/iovisor/bcc:${{ matrix.os.distro }}-${{ matrix.os.version }} bcc-docker
     - name: Run bcc build - llvm-${{ matrix.llvm_version }}
       env: ${{ matrix.env }}
       run: |
@@ -151,7 +151,7 @@ jobs:
     - name: Pull docker container
       if: steps.changes.outputs.docker == 'false'
       run: |
-        docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.os.distro }}-${{ matrix.os.version }}
+        docker pull ${{ env.REGISTRY }}/iovisor/bcc:${{ matrix.os.distro }}-${{ matrix.os.version }}
     - name: Build docker container
       if: steps.changes.outputs.docker == 'true'
       uses: ./.github/actions/build-container
@@ -161,7 +161,7 @@ jobs:
         os_nick: ${{ matrix.os.nick }}
     - name: Tag docker container
       run: |
-        docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.os.distro }}-${{ matrix.os.version }} bcc-docker
+        docker tag ${{ env.REGISTRY }}/iovisor/bcc:${{ matrix.os.distro }}-${{ matrix.os.version }} bcc-docker
     - name: Run bcc build
       env: ${{ matrix.env }}
       run: |
